--- a/css/login.css
+++ b/css/login.css
@@ -1,323 +1,61 @@
+/* LOGIN FORM */
 
-  *{
-    margin: 0;
-    padding: 0;
-}
-body::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
-}
-
-body::-webkit-scrollbar-track {
-    background: #000000; /* Background of the scrollbar track */
-}
-body::-webkit-scrollbar-track:hover {
-    background:  #d3bba3; /* Background of the scrollbar track */
-}
-
-body::-webkit-scrollbar-thumb {
-    background: #990202; /* Scrollbar thumb color */
-    border-radius: 15px; /* Round the corners of the scrollbar thumb */
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background: #122f56bd; /* Color of the scrollbar thumb when hovered */
-}
-body{
-    background: linear-gradient(#3e3c3c , rgba(0, 0, 0, 0.841),#000000 );
-}
-body{
-    width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)30%,rgba(0,0,0,0.5)40%), url(backGroundImage.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-}
-.forget{
-    font-size: 16px;
-    color: #c70808;
-    text-decoration: none;
-    transition: 0.2s ease-in-out;
-}
-
-body::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
-}
-
-body::-webkit-scrollbar-track {
-    background: #000000; /* Background of the scrollbar track */
-}
-body::-webkit-scrollbar-track:hover {
-    background:  #d3bba3; /* Background of the scrollbar track */
-}
-
-body::-webkit-scrollbar-thumb {
-    background: #990202; /* Scrollbar thumb color */
-    border-radius: 15px; /* Round the corners of the scrollbar thumb */
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background: #122f56bd; /* Color of the scrollbar thumb when hovered */
-}
-.forget:hover{
-    color: white;
-}
-.navbar{
-    width: 1200px;
-    height: 75px;
-    margin: auto;
-}
-
-.icon{
-    width: 200px;
-    float: left;
-    height: 70px;
-}
-
-.logo{
-    color: #c70808;
-    font-size: 35px;
-    font-family: Arial;
-    padding-left: 5px;
-    float: left;
-    padding-top: 10px;
-    margin-top: 5px
-}
-
-.menu{
-    width: 370px;
-    float: left;
-    height: 70px;
-
-}
-
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li{
-    list-style: none;
-    margin-left: 50px;
-    margin-top: 27px;
-    font-size: 14px;
-}
-
-ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-}
-
-ul li a:hover{
-    color: #c70808;
-}
-
-.search{
-    width: 350px;
-    float: left;
-    margin-left: 250px;
-    margin-top: 10px;
-
-}
-body{
-    margin-top: -109px;
-    height: 100vh;
-}
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #c70808;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.btn{
-    width: 100px;
-    height: 40px;
-    background: #c70808;
-    border: 2px solid #c70808;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    transition: 0.2s ease;
-    cursor: pointer;
-}
-.btn:hover{
-    color: #000;
-}
-
-.btn:focus{
-    outline: none;
-}
-
-.srch:focus{
-    outline: none;
-}
-
-.content{
-    width: 1200px;
+.login {
+    background: var(--darkened-bg);
     height: auto;
-    margin: auto;
-    color: #fff;
-    position: relative;
 }
 
-.content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
+.login #header {
+    height: auto;
+    padding: 15px 16px;
+    justify-content: center;
 }
 
-.content h1{
-    font-family: 'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
+.login #header h1 {
+    font-size: 1.125rem;
+    margin: 0;
 }
 
-.content .cn{
-    width: 160px;
-    height: 40px;
-    background: #c70808;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: .4s ease;
-    
+.login #header h1 a {
+    color: var(--header-link-color);
 }
 
-.content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
+.login #content {
+    padding: 20px 20px 0;
 }
 
-.cn:hover{
-    background-color: #fff;
+.login #container {
+    background: var(--body-bg);
+    border: 1px solid var(--hairline-color);
+    border-radius: 4px;
+    overflow: hidden;
+    width: 28em;
+    min-width: 300px;
+    margin: 100px auto;
+    height: auto;
 }
 
-.content span{
-    color: #c70808;
-    font-size: 65px
+.login .form-row {
+    padding: 4px 0;
 }
 
-.form{
-    width: 250px;
-    height: fit-content;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.8) 50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    transform: translate(0%, -5%);
-    border-radius: 10px;
-    padding: 25px;
-    top: 100px;
+.login .form-row label {
+    display: block;
+    line-height: 2em;
 }
 
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #c70808;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
+.login .form-row #id_username, .login .form-row #id_password {
     padding: 8px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #c70808;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-
-.form input:focus{
-    outline: none;
-}
-
-::placeholder{
-    color: #fff;
-    font-family: Arial;
-}
-
-.btnn{
-    width: 240px;
-    height: 40px;
-    background: #c70808;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
-}
-.btnn:hover{
-    background: #fff;
-    color: #c70808;
-}
-.btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
+.login .submit-row {
+    padding: 1em 0 0 0;
+    margin: 0;
     text-align: center;
 }
-.form .link a{
-    text-decoration: none;
-    color: #c70808;
-}
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
+
+.login .password-reset-link {
     text-align: center;
-}
-.icons a{
-    text-decoration: none;
-    color: #fff;
-}
-.icons ion-icon{
-    color: #fff;
-    font-size: 30px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
-}
-.icons ion-icon:hover{
-    color: #c70808;
 }
